# 20th-BuyBuddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local_worker.py  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
BuyBuddy/: asgi.py  celery.py  celery_app.py  settings.py  urls.py  wsgi.py
buy/: urls.py  views.py
buy/services/: group_services.py
groups/: admin.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_initial.py  0003_remove_group_buyers_alter_group_deadline_and_more.py  0004_alter_joinedgroup_deleted_at.py  0005_group_description_alter_group_banner.py  0005_group_description_alter_group_banner_and_more.py  0005_remove_group_created_at_remove_group_deadline_and_more.py  0006_alter_group_created_at.py  0006_group_created_at_group_deadline_group_deleted_at_and_more.py  0007_alter_group_created_at_alter_group_deadline_and_more.py  0009_joinedgroup_updated_at.py  (+12 more)
notifications/: apps.py  context_processors.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
orders/: apps.py  exports.py  message_views.py  models.py  services.py  signals.py  urls.py  utils.py  views.py
pages/: urls.py  views.py
products/: admin.py  forms.py  models.py  urls.py  views.py
sales/: models.py  urls.py  views.py
status/: urls.py  views.py
templates/: 404.html  500.html
users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  social_oauth.py  tokens.py  urls.py  views.py
(+172 files in other folders)
