[project]
name = "buybuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.13",
    "django>=5.2.5",
    "django-anymail[mailgun]>=13.0.1",
    "django-storages>=1.14.6",
    "cloudinary>=1.44.1",
    "django-cloudinary-storage>=0.3.0",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "django-fsm-2>=4.0.0",
    "django-tinymce>=4.1.0",
    "celery[librabbitmq]>=5.5.3",
    "django-widget-tweaks>=1.5.0",
]

[tool.black]
skip-string-normalization = true
